--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,189 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
-</head>
-<body>
-   <header>
+<html lang="zxx">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mueblería Juárez</title>
+    <link rel="stylesheet" href="assets/css/app.css">
+  </head>
 
-   </header>
-   <main>
+  <body>
+    <header>
+      <h1 class="site-name">Mueblería <span>Juárez</span> </h1>
+    </header>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="nosotros.html">Nosotros</a>
+      <a href="tienda.html">Tienda</a>
+      <a href="blog.html">Bolog</a>
+      <a href="contacto.html">Contacto</a>
+      <a href="galeria.html">Galeria</a>
+    </nav>
+    <section>
+      <h2>Categorías</h2>
+      <div>
+        <img src="assets/img/categoria1.jpg" alt="Imagen de Categoria" />
+        <a href="#">Oficina</a>
+      </div>
+      <div>
+        <img src="assets/img/categoria2.jpg" alt="Imagen de Categoria" />
+        <a href="#">Hogar</a>
+      </div>
+      <div>
+        <img src="assets/img/categoria3.jpg" alt="Imagen de Categoria" />
+        <a href="#">Cocina</a>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h2>Sobre Nosotros</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto
+          ab, magni eaque fuga optio perferendis! Unde et, quae rem, magni sed
+          veniam illum corporis quisquam fugit dolorem dolore voluptate totam?
+        </p>
+      </div>
+    </section>
+    <main>
+      <section>
+        <h2>Nuestros Productos</h2>
+        <div>
+          <div>
+            <img src="assets/img/producto1.jpg" alt="Imagen de producto" />
+            <div>
+              <h3>Producto 1</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. llam
+                laboriosam reiciendis mollitia ab explicabo sint eos quia eius
+                architecto obcaecati est cum, vel illum incidunt maxime aliquid
+                saepe nulla ea?
+              </p>
+              <p>$30,000</p>
+              <a href="#">Agregar al carrito</a>
+            </div>
+            <!-- Información del producto -->
+          </div>
+          <!-- producto -->
 
-   </main>
-   <footer>
-    
-   </footer>
-</body>
+          <div>
+            <img src="assets/img/producto2.jpg" alt="Imagen de producto" />
+            <div>
+              <h3>Producto 2</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. llam
+                laboriosam reiciendis mollitia ab explicabo sint eos quia eius
+                architecto obcaecati est cum, vel illum incidunt maxime aliquid
+                saepe nulla ea?
+              </p>
+              <p>$30,000</p>
+              <a href="#">Agregar al carrito</a>
+            </div>
+            <!-- Información del producto -->
+          </div>
+          <!-- producto -->
+
+          <div>
+            <img src="assets/img/producto3.jpg" alt="Imagen de producto" />
+            <div>
+              <h3>Producto 3</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. llam
+                laboriosam reiciendis mollitia ab explicabo sint eos quia eius
+                architecto obcaecati est cum, vel illum incidunt maxime aliquid
+                saepe nulla ea?
+              </p>
+              <p>$30,000</p>
+              <a href="#">Agregar al carrito</a>
+            </div>
+            <!-- Información del producto -->
+          </div>
+          <!-- producto -->
+
+          <div>
+            <img src="assets/img/producto4.jpg" alt="Imagen de producto" />
+            <div>
+              <h3>Producto 4</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. llam
+                laboriosam reiciendis mollitia ab explicabo sint eos quia eius
+                architecto obcaecati est cum, vel illum incidunt maxime aliquid
+                saepe nulla ea?
+              </p>
+              <p>$30,000</p>
+              <a href="#">Agregar al carrito</a>
+            </div>
+            <!-- Información del producto -->
+          </div>
+          <!-- producto -->
+
+          <div>
+            <img src="assets/img/producto5.jpg" alt="Imagen de producto" />
+            <div>
+              <h3>Producto 5</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. llam
+                laboriosam reiciendis mollitia ab explicabo sint eos quia eius
+                architecto obcaecati est cum, vel illum incidunt maxime aliquid
+                saepe nulla ea?
+              </p>
+              <p>$30,000</p>
+              <a href="#">Agregar al carrito</a>
+            </div>
+            <!-- Información del producto -->
+          </div>
+          <!-- producto -->
+
+          <div>
+            <img src="assets/img/producto6.jpg" alt="Imagen de producto" />
+            <div>
+              <h3>Producto 6</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. llam
+                laboriosam reiciendis mollitia ab explicabo sint eos quia eius
+                architecto obcaecati est cum, vel illum incidunt maxime aliquid
+                saepe nulla ea?
+              </p>
+              <p>$30,000</p>
+              <a href="#">Agregar al carrito</a>
+            </div>
+            <!-- Información del producto -->
+          </div>
+          <!-- producto -->
+        </div>
+        <!-- fin de la lista de productos -->
+      </section>
+    </main>
+    <footer>
+      <div>
+        <h3>Categorias</h3>
+        <nav>
+          <a href="#">Cocina</a>
+          <a href="#">Oficina</a>
+          <a href="#">Jardin</a>
+          <a href="#">Cochera</a>
+          <a href="#">Dormitorios</a>
+        </nav>
+      </div>
+      <div>
+        <h3>Sobre Nosotros</h3>
+        <nav>
+          <a href="#">Nuestra Historia</a>
+          <a href="#">Misión, Visión y Valores</a>
+          <a href="#">Carreras</a>
+          <a href="#">Politica de Privacida</a>
+          <a href="#">Terminos del Servicio</a>
+        </nav>
+      </div>
+      <div>
+        <h3>Soporte</h3>
+        <nav>
+          <a href="#">Preguntas Frecuentes</a>
+          <a href="#">Ayuda en linea</a>
+          <a href="#">Confianza y seguridad</a>
+        </nav>
+      </div>
+      <p>Todos los derechos reservados rtc.</p>
+    </footer>
+  </body>
 </html>
