--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mueblería Juárez</title>
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/app.css">
   </head>
 
@@ -12,7 +13,7 @@
     <header>
       <h1 class="site-name">Mueblería <span>Juárez</span> </h1>
     </header>
-    <nav>
+    <nav class="main-nav">
       <a href="index.html">Inicio</a>
       <a href="nosotros.html">Nosotros</a>
       <a href="tienda.html">Tienda</a>
@@ -35,7 +36,7 @@
         <a href="#">Cocina</a>
       </div>
     </section>
-    <section>
+    <section class="about">
       <div>
         <h2>Sobre Nosotros</h2>
         <p>
