--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,17 @@
     <header>
       <h1 class="site-name">Mueblería <span>Juárez</span> </h1>
     </header>
-    <nav class="main-nav">
-      <a href="index.html">Inicio</a>
-      <a href="nosotros.html">Nosotros</a>
-      <a href="tienda.html">Tienda</a>
-      <a href="blog.html">Bolog</a>
-      <a href="contacto.html">Contacto</a>
-      <a href="galeria.html">Galeria</a>
-    </nav>
+    <div class="contenedor-nav">
+      <nav class="main-nav contenedor">
+        <a href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="tienda.html">Tienda</a>
+        <a href="blog.html">Bolog</a>
+        <a href="contacto.html">Contacto</a>
+        <a href="galeria.html">Galeria</a>
+      </nav>
+    </div>    
+    <div class="hero"></div>
     <section>
       <h2>Categorías</h2>
       <div>
