--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <header>
       <h1 class="site-name">Mueblería <span>Juárez</span> </h1>
     </header>
-    <div class="contenedor-nav">
+    <div class="container-nav">
       <nav class="main-nav contenedor">
         <a href="index.html">Inicio</a>
         <a href="nosotros.html">Nosotros</a>
@@ -24,20 +24,22 @@
       </nav>
     </div>    
     <div class="hero"></div>
-    <section>
-      <h2>Categorías</h2>
-      <div>
-        <img src="assets/img/categoria1.jpg" alt="Imagen de Categoria" />
-        <a href="#">Oficina</a>
-      </div>
-      <div>
-        <img src="assets/img/categoria2.jpg" alt="Imagen de Categoria" />
-        <a href="#">Hogar</a>
-      </div>
-      <div>
-        <img src="assets/img/categoria3.jpg" alt="Imagen de Categoria" />
-        <a href="#">Cocina</a>
-      </div>
+    <section class="container categories">
+      <h2>Categorías de Productos</h2>
+      <div class="list-categories">
+        <div class="category">
+          <img src="assets/img/categoria1.jpg" alt="Imagen de Categoria" />
+          <a href="#">Oficina</a>
+        </div>
+        <div class="category">
+          <img src="assets/img/categoria2.jpg" alt="Imagen de Categoria" />
+          <a href="#">Hogar</a>
+        </div>
+        <div class="category">
+          <img src="assets/img/categoria3.jpg" alt="Imagen de Categoria" />
+          <a href="#">Cocina</a>
+        </div>        
+      </div>      
     </section>
     <section class="about">
       <div>
