html bases grid

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,12 @@
     </header>
     <div class="container-nav">
       <nav class="main-nav contenedor">
-        <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Nosotros</a>
-        <a href="tienda.html">Tienda</a>
-        <a href="blog.html">Bolog</a>
-        <a href="contacto.html">Contacto</a>
-        <a href="galeria.html">Galeria</a>
+        <a href="index.html" class="main-nav-item">Inicio</a>
+        <a href="nosotros.html" class="main-nav-item">Nosotros</a>
+        <a href="tienda.html" class="main-nav-item">Tienda</a>
+        <a href="blog.html" class="main-nav-item">Bolog</a>
+        <a href="contacto.html" class="main-nav-item">Contacto</a>
+        <a href="galeria.html" class="main-nav-item">Galeria</a>
       </nav>
     </div>    
     <div class="hero"></div>
