--- a/templates/assets/css/app.css
+++ b/templates/assets/css/app.css
@@ -34,14 +34,60 @@ img {
 .container-nav {
   border-top: 1px solid #e1e1e1;
 }
+
 .main-nav{
   /* border-color: #e1e1e1;
   border-top-style: solid;
   border-width: 1px; */ 
+
   padding: 25px 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  
+}
+
+/* .main-nav-item {
+  width: 50px;
+  height: 50px;
+  background-color: #037bc0;
+} */
+/* .main-nav{
+  padding: 25px 0;
+  display: grid;  
+  grid-template-columns: repeat(6,1fr);
+  align-items: center;  
+  
+} */
+
+.main-nav a:hover {
+background-color: #004C76;
+border-bottom-right-radius: 20px;
+max-width: 100%;
+width: 12rem;
+height: 3rem;
+text-align: center;
+max-height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+color: #e1e1e1;
+}
+
+.main-nav-item {
+  max-width: 100%;
+  width: 12rem;
+  height: 3rem;
+  text-align: center;
+  max-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center
+
+/* max-width: 100%;
+max-height: 100vh;
+height: 3rem; */
+
 }
 
 .about {
